--- a/projects/topomojo-work/src/app/template-editor/template-editor.component.html
+++ b/projects/topomojo-work/src/app/template-editor/template-editor.component.html
@@ -31,10 +31,10 @@
       <app-confirm-button btnClass="btn btn-sm btn-outline-warning" (confirm)="relink(rev)">
         <span>Resolve</span>
       </app-confirm-button>
-      <span class="mx-1"></span>
+      <!-- <span class="mx-1"></span>
       <button class="btn btn-sm btn-outline-warning">
         <span>Ignore</span>
-      </button>
+      </button> -->
     </span>
   </div>
 </ng-container>
