allow challenge question reorder

--- a/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
@@ -51,6 +51,8 @@
           app_url, topomojo_url &mdash; this application url (no path)
           grader_url &mdash; the grading url endpoint
           api_key, grader_key &mdash; the gamespace apikey (not for participants)
+          ipv4:cidr_address &mdash; yields a random ip in the cidr range
+          ipv4:192.168.22.0/24 &mdash; example result 192.168.22.137
         </pre>
       </small>
     </div>
