update clipboard text

--- a/projects/topomojo-mks/src/app/console/console.component.html
+++ b/projects/topomojo-mks/src/app/console/console.component.html
@@ -106,8 +106,8 @@
         <h3>Clipboard</h3>
         <p *ngIf="consoleSupportsFeatures?.autoCopyVmSelection && enableAutoCopyVmSelection">
           <small>
-            This virtual console automatically copies any selections you make in the virtualized
-            machine to your <strong>your local machine's clipboard</strong>. You can use the
+            This virtual console automatically copies the clipboard in the virtualized
+            machine to <strong>your local machine's clipboard</strong>. You can use the
             checkbox below to disable this behavior.
           </small>
         </p>
