--- a/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/workspace-browser/workspace-browser.component.html
@@ -2,7 +2,7 @@
 <!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
 
 <!-- Show standard header -->
-<div *ngIf="!readyToDownload">
+<div>
   <div class="input-group input-group-sm">
     <div class="input-group-prepend">
       <span class="input-group-text">
@@ -14,84 +14,65 @@
   </div>
   <input type="checkbox" [checked]="areAllSelected()" (change)="selectAll($event)" class="select-all"
     *ngIf="selectDownloads">
-  <!-- Create -->
-  <button class="btn btn-sm btn-link text-primary" (click)="showCreatePanel=!showCreatePanel"
-    *ngIf="!showUpload && !showDownload">
-    <fa-icon [icon]="faPlus"/>
-    <span>Create</span>
-  </button>
-  <!-- Upload -->
-  <button class="btn btn-sm btn-link text-primary" (click)="showUpload = true" *ngIf="!showDownload"
-    [disabled]="showUpload">
-    <fa-icon [icon]="faUpload" />
-    <span>Upload</span>
-  </button>
-  <button class="btn btn-sm btn-link text-primary" (click)="jsonInput.click()" *ngIf="showUpload">
-    <fa-icon [icon]="faFolder" />
-    <span>Folder</span>
-  </button>
-  <button class="btn btn-sm btn-link text-primary" (click)="zipInput.click()" *ngIf="showUpload">
-    <fa-icon [icon]="faFile" />
-    <span>ZipFile</span>
-  </button>
-  <!-- Download -->
-  <button class="btn btn-sm btn-link text-primary" (click)="showDownload = true" *ngIf="!showUpload"
-    [disabled]="showDownload">
-    <fa-icon [icon]="faDownload" />
-    <span>Download</span>
-  </button>
-  <button class="btn btn-sm btn-link text-primary" (click)="setReadyToDownload()"
-    *ngIf="showDownload && !selectDownloads">
-    <fa-icon [icon]="faFolder" />
-    <span>All</span>
-  </button>
-  <button class="btn btn-sm btn-link text-primary" (click)="selectDownloads = true"
-    *ngIf="showDownload && !selectDownloads">
-    <fa-icon [icon]="faFile" />
-    <span>Select</span>
-  </button>
-  <button class="btn btn-sm btn-link text-primary" (click)="setReadyToDownload()" *ngIf="showDownload && selectDownloads"
-    [disabled]="selected.length < 1">
-    <fa-icon [icon]="faFile" />
-    <span>Done Selecting ({{ selected.length }})</span>
-  </button>
-  <!-- Cancel -->
-  <button class="btn btn-sm btn-link text-primary"
-    (click)="showUpload = false; showDownload = false; selectDownloads = false;" *ngIf="showUpload || showDownload">
-    <fa-icon [icon]="faTimes" />
-    <span>Cancel</span>
-  </button>
+  <ng-container *ngIf="!selectDownloads">
+    <!-- Create -->
+    <button class="btn btn-sm btn-link text-primary" (click)="showCreatePanel=!showCreatePanel">
+      <fa-icon [icon]="faPlus"/>
+      <span>Create</span>
+    </button>
+    <button class="btn btn-sm btn-link text-primary" (click)="zipInput.click()">
+      <fa-icon [icon]="faFile" />
+      <span>UploadZip</span>
+    </button>
+    <!-- Download -->
+    <button class="btn btn-sm btn-link text-primary" (click)="selectDownloads = true" *ngIf="!selectDownloads">
+      <fa-icon [icon]="faDownload" />
+      <span>Download</span>
+    </button>
+  </ng-container>
+  <ng-container *ngIf="selectDownloads">
+    <button class="btn btn-sm btn-link text-primary" (click)="download()" *ngIf="selectDownloads" [disabled]="selected.length < 1">
+      <fa-icon [icon]="faDownload" />
+      <span>Download ({{ selected.length }})</span>
+    </button>
+    <!-- Cancel -->
+    <button class="btn btn-sm btn-link text-primary" (click)="selectDownloads = false;">
+      <fa-icon [icon]="faTimes" />
+      <span>Cancel</span>
+    </button>
+  </ng-container>
 </div>
-
-<!-- Show download header -->
-<h4 *ngIf="readyToDownload"></h4>
-<h4 *ngIf="readyToDownload && !isDownloading">
-  Download <span class="text-primary" style="font-weight: 600;" *ngIf="selected.length === 0">ALL</span> Workspaces?
-  <button class="btn btn-outline-info btn-sm mx-1" (click)="download()">
-    <fa-icon [icon]="faDownload"></fa-icon>
-    <span>Download ({{ selected.length > 0 ? selected.length : 'ALL' }})</span>
-  </button>
-  <button class="btn btn-outline-info btn-sm mx-1" (click)="resetDownload()">
-    <fa-icon [icon]="faTimes"></fa-icon>
-    <span>Cancel</span>
-  </button>
-</h4>
-<h4 *ngIf="readyToDownload && isDownloading">Downloading workspaces ... <br />Please wait ...</h4>
 
 <!-- show create workspace panel -->
 <div *ngIf="showCreatePanel" class="my-2">
   <app-workspace-creator></app-workspace-creator>
 </div>
 
+<div *ngIf="isDownloading" class="text-center">
+  <app-spinner></app-spinner>
+</div>
+
+<div *ngIf="uploaded$ | async as results" class="m-2">
+  <alert type="info" [dismissible]="true">
+    <span>Upload Results:</span>
+    <ul>
+      <li *ngFor="let r of results">{{r}}</li>
+    </ul>
+  </alert>
+</div>
+
+<div *ngIf="error_msg">
+  <alert type="danger" [dismissible]="true">{{error_msg}}</alert>
+</div>
+
 <!-- top pager for workspaces -->
-<app-pager [skip]="skip" [take]="take" [count]="count"
-  (changed)="readyToDownload ? pageDownloads($event) : paged($event)"></app-pager>
+<app-pager [skip]="skip" [take]="take" [count]="count" (changed)="paged($event)"></app-pager>
 <hr  class="mt-0 mb-2" *ngIf="selected.length > 0" />
 
 <!-- paged workspace list (all or selected) -->
-<div *ngFor="let g of readyToDownload ? (selected$ | async) : (source$ | async); trackBy:trackById" class="row mb-1">
+<div *ngFor="let g of (source$ | async); trackBy:trackById" class="row mb-1">
   <div class="col-1" *ngIf="selectDownloads">
-    <input type="checkbox" [checked]="isSelected(g.id)" (change)="select($event, g)" [disabled]="readyToDownload"
+    <input type="checkbox" [checked]="isSelected(g.id)" (change)="select($event, g)"
       style="margin-left: 30px;">
   </div>
   <div class="col-7">
@@ -109,15 +90,10 @@
       <fa-icon [icon]="faList"></fa-icon>
       <span>View</span>
     </button>
-    <app-confirm-button btnClass="btn btn-outline-danger btn-sm" (confirm)="delete(g)" *ngIf="!readyToDownload">
+    <app-confirm-button btnClass="btn btn-outline-danger btn-sm" (confirm)="delete(g)">
       <fa-icon [icon]="faTrash"></fa-icon>
       <span>Delete</span>
     </app-confirm-button>
-    <button class="btn btn-outline-danger btn-sm mx-1" (click)="select({target: {checked: false}}, g)"
-      *ngIf="readyToDownload">
-      <fa-icon [icon]="faMinus"></fa-icon>
-      <span>Remove</span>
-    </button>
   </div>
   <div *ngIf="viewed === g" class="col-12">
     <ng-container *ngIf="detail$ | async as detail">
@@ -153,8 +129,7 @@
 
 <!-- bottom workspace pager -->
 <hr class="my-0" *ngIf="selected.length > 0" />
-<app-pager [skip]="skip" [take]="take" [count]="count"
-  (changed)="readyToDownload ? pageDownloads($event) : paged($event)"></app-pager>
+<app-pager [skip]="skip" [take]="take" [count]="count" (changed)="paged($event)"></app-pager>
 
 <!-- Folder and File selectors -->
 <input hidden (change)="upload($event)" #jsonInput type="file" webkitdirectory multiple />
