--- a/projects/topomojo-work/src/app/gamespace-state/gamespace-state.component.html
+++ b/projects/topomojo-work/src/app/gamespace-state/gamespace-state.component.html
@@ -26,5 +26,5 @@
   </div>
 </ng-container>
 
-<h3 *ngIf="game.challenge?.questions?.length">Challenge Questions</h3>
+<h3 *ngIf="hasQuestions">Challenge Questions</h3>
 <app-gamespace-quiz [state]="game"></app-gamespace-quiz>
