option enable_upload to hide components when disabled

--- a/projects/topomojo-work/src/app/workspace-card/workspace-card.component.html
+++ b/projects/topomojo-work/src/app/workspace-card/workspace-card.component.html
@@ -9,7 +9,7 @@
       <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'templates']">Templates</a>
       <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'document']">Document</a>
       <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'challenge']">Challenge</a>
-      <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'files']">Files</a>
+      <a *ngIf="upload_enabled" class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'files']">Files</a>
       <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/topo', workspace.id, 'play']">Play</a>
     </div>
   </div>
