--- a/projects/topomojo-work/src/app/challenge-editor/variant-form/variant-form.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/variant-form/variant-form.component.html
@@ -5,7 +5,8 @@
 
   <div class="indent" [hidden]="!detail">
     <label class="col-form-label-sm">Markdown</label>
-    <ngx-monaco-editor id="variant-{{index}}-editor" formControlName="text" [options]="editorOptions" aria-label="challenge text"></ngx-monaco-editor>
+    <ngx-monaco-editor id="variant-{{index}}-editor" formControlName="text" [options]="editorOptions"
+      aria-label="challenge text"></ngx-monaco-editor>
     <small>Provide any information specific to this variant. This is appended to the challenge text.</small>
   </div>
 
@@ -21,7 +22,8 @@
       <label class="col-form-label-sm">File</label>
       <div class="input-group input-group-sm mb-1">
         <input type="hidden" class="form-control" formControlName="file">
-        <label id="iso-input-{{index}}" class="form-control" readonly>{{form.get('iso.file')?.value?.split('/').pop()}}</label>
+        <label id="iso-input-{{index}}" class="form-control"
+          readonly>{{form.get('iso.file')?.value?.split('/').pop()}}</label>
         <!-- <label id="iso-input" class="form-control">{{form.get('iso.file')?.value?.split('/').pop()}}</label> -->
         <div class="input-group-append">
           <button class="btn btn-sm btn-outline-info" (click)="isoClear()">
@@ -53,35 +55,52 @@
     <div *ngFor="let qs of sections.controls; let i = index" [formGroupName]="i" class="indent mb-2 pb-2">
 
       <div class="d-flex align-items-center">
-        <label class="label pop-info">QuestionSet.{{i+1}}</label>
-        <div class="spacer"></div>
-        <button class="btn btn-sm btn-outline-dark mr-1" btnCheckbox [(ngModel)]="more[i]" [ngModelOptions]="{standalone: true}">
-          <fa-icon [icon]="faMore"></fa-icon>
-          <span>Detail</span>
-        </button>
-        <button class="btn btn-sm btn-outline-dark mr-1" (click)="addSet(qs.value)">
-          <fa-icon [icon]="faCopy"></fa-icon>
-          <span>Clone</span>
-        </button>
-        <app-confirm-button btnClass="btn btn-sm btn-outline-dark" (confirm)="removeSet(i)">
-          <fa-icon [icon]="faTrash"></fa-icon>
-          <span>Remove</span>
-        </app-confirm-button>
+        <input type="text" class="form-control question-set-name-input flex-grow-1" formControlName="name"
+          placeholder="Question Set {{i+1}}" maxlength="100">
+
+        <div class="btn-group mr-2" role="group" aria-label="Variant buttons">
+          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons" tooltip="Move this set up"
+            [disabled]="i == 0" (click)="updateSectionIndex(i, -1)">
+            <fa-icon [icon]="faArrowUp"></fa-icon>
+          </button>
+
+          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons" tooltip="Move this set down"
+            [disabled]="i == sections.length - 1" (click)="updateSectionIndex(i, 1)">
+            <fa-icon [icon]="faArrowDown"></fa-icon>
+          </button>
+
+          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons"
+            tooltip="Show details for this set" btnCheckbox [(ngModel)]="more[i]" [ngModelOptions]="{standalone: true}">
+            <fa-icon [icon]="faMore"></fa-icon>
+          </button>
+
+          <button type="button" class="btn btn-sm btn-outline-dark variant-control-buttons" tooltip="Clone this set"
+            (click)="addSet(qs.value)">
+            <fa-icon [icon]="faClone"></fa-icon>
+          </button>
+        </div>
+        <div class="btn-group mr-2" role="group" aria-label="Variant buttons (remove)">
+          <app-confirm-button btnClass="btn btn-sm btn-outline-dark mx-1" (confirm)="removeSet(i)">
+            <fa-icon [icon]="faTrash"></fa-icon>
+            <span>Remove</span>
+          </app-confirm-button>
+        </div>
       </div>
 
-      <div class="" [hidden]="!detail && !more[i]">
+      <div [hidden]="!detail && !more[i]">
         <label class="col-form-label-sm">Markdown</label>
-        <ngx-monaco-editor id="section-{{this.index}}.{{i}}-editor" formControlName="text" [options]="editorOptions" aria-label="section text"></ngx-monaco-editor>
+        <ngx-monaco-editor id="section-{{this.index}}.{{i}}-editor" formControlName="text" [options]="editorOptions"
+          aria-label="section text"></ngx-monaco-editor>
         <small>Provide any instructions specific to this question set.</small>
       </div>
 
-      <app-question-form [form]="$any(qs)" [vindex]="this.index" [index]="i" [more]="detail || more[i]"></app-question-form>
-
+      <app-question-form [form]="$any(qs)" [vindex]="this.index" [index]="i"
+        [more]="detail || more[i]"></app-question-form>
     </div>
   </ng-container>
 
   <button class="btn btn-sm btn-outline-secondary" (click)="addSet()">
     <fa-icon [icon]="faPlus"></fa-icon>
-    <span>Add QuestionSet</span>
+    <span>Add Question Set</span>
   </button>
 </div>
