--- a/projects/topomojo-work/src/styles.scss
+++ b/projects/topomojo-work/src/styles.scss
@@ -6,11 +6,11 @@
 @import "../../../node_modules/bootstrap/scss/mixins";
 
 $theme-colors: (
-  "primary": #b00,
-  "secondary": #247,
-  "info": #067,
-  "success": #085,
-  "warning": #a60,
+  "primary": #c41230,
+  "secondary": #043673,
+  "info": #008285,
+  "success": #00853e,
+  "warning": #fdb515,
   "danger": #fa8304,
   "light": $gray-100,
   "dark": $gray-800
